/*
@Author: liubai
@Date: 2020/5/18 10:31 下午
@Desc: 定义请求结构
*/
syntax = "proto3";

package heartbeat;
option go_package = ".;heartbeat";

message RequestHeader {
  uint32 cmd_no = 1;
  uint32 head_length = 2;
  uint32 body_length = 3;
  uint32 body_type = 4;
  string version = 5;
}

message LoginRequest {
  string user_name = 1;
  string password = 2;
  string token = 3;
  uint32 login_type = 4;
  uint32 version = 5;
}

message LoginRespone {
  uint32 code = 1;
  uint32 login_state = 2;
  string oms = 3;
}
